# llcuda

./: .gitattributes  .gitignore  API_REFERENCE.md  BINARY_VERIFICATION_REPORT.md  BUNDLED_BINARIES_GUIDE.md  CHANGELOG.md  CMakeLists.txt  COLAB_ERRORS_ANALYSIS.md  COLAB_TESTING_GUIDE.md  COMMANDS_TO_RUN.txt  COMPATIBILITY_MATRIX.md  COMPLETE_FIX_SUMMARY_v2.0.2.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CUDA_PTX_FIX.md  CUDA_VERSION_MISMATCH_SOLUTION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY_v1.1.0.md  DEPLOYMENT_STATUS_v1.1.0.txt  DEPLOYMENT_SUMMARY_v1.1.0.md  FINAL_STATUS_v1.1.0.md  FINAL_UPLOAD_STEPS.sh  FIXES_APPLIED.md  FIX_USER_CANCELLATION_SUMMARY.md  GITHUB_DESCRIPTION.txt  GITHUB_INSTALL_GUIDE.md  GITHUB_RELEASE_COMPLETE_GUIDE.md  GITHUB_TOPICS.txt  GITHUB_UPDATE_VERIFICATION.md  GIT_PUSH_COMPLETION_REPORT.md  HYBRID_ARCHITECTURE_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v1.1.0.md  IMPLEMENTATION_V1.0.md  INSTALL.md  JUPYTERLAB_FEATURES.md  LLCUDA_UNSLOTH_INTEGRATION_PLAN.md  MANIFEST.in  MANUAL_PYPI_UPLOAD.md  (+69 more)
.claude/: settings.local.json
archive/v2.0.x/: README.md
bundles/: llcuda-bins-multiarch.tar.gz.sha256
bundles/llcuda-bins-multiarch/: metadata.json
core/: __init__.py
csrc/: bindings.cpp
csrc/core/: device.cu  device.h  tensor.cu  tensor.h
csrc/ops/: matmul.cu  matmul.h
docs/: API_REFERENCE.md  BUGFIX_PACKAGING_SCRIPT.md  BUILD_GUIDE.md  COLAB_FRESH_INSTALL_FIX.md  COLAB_INSTALLATION_ISSUES_AND_FIXES.md  CONFIGURATION.md  Colab-python3-pip-list.txt  FINAL_WORKFLOW_GUIDE.md  GGUF_GUIDE.md  GGUF_NEURAL_NETWORK_VISUALIZATION.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES_SIMPLIFIED.md  GOOGLE_COLAB_IMPORT_ISSUES_FIXED.md  INDEX.md  INSTALLATION.md  INTEGRATION_GUIDE.md  KAGGLE_GUIDE.md  LINKEDIN_POST_V2.2.0.md  NOTEBOOKS_GUIDE.md  PACKAGING_STATUS.md  PYPI_PACKAGE_GUIDE.md  PYPI_UPDATE_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_GUIDE.md  README_COMPLETE_SOLUTION.md  READY_TO_PACKAGE.md  RELEASE_FILES_OVERVIEW.txt  RELEASE_SUMMARY.md  TROUBLESHOOTING.md  UPLOAD_INSTRUCTIONS.md
examples/: README.md  api_usage_examples.py  check_colab_cuda.py  colab_test_v1.2.2.py  complete_workflow_example.py  quickstart_jupyterlab.ipynb
llcuda/: FIXES_SUMMARY.md  HYBRID_ARCHITECTURE_PLAN.md  ONLINE_UPDATES_CHECKLIST.md  PYPI_SIZE_LIMIT_ISSUE.md  PYPI_UPLOAD_READY.txt  README.md  README_DEPLOYMENT.txt  RELEASE_v1.1.0.md  __init__.py  gguf_parser.py  models.py  pyproject.toml  requirements-jupyter.txt  server.py  utils.py
llcuda-other-notebooks-practice/: 01-quickstart-llcuda-v2.2.0.ipynb  02-llama-server-setup-llcuda-v2.2.0.ipynb  03-multi-gpu-inference-llcuda-v2.2.0.ipynb  04-gguf-quantization-llcuda-v2.2.0.ipynb  05-unsloth-integration-llcuda-v2.2.0.ipynb  07-knowledge-graph-extraction-graphistry-v2.2.0.ipynb  08-document-network-analysis-graphistry-llcuda-v2-2-0.ipynb  10-complete-workflow-llcuda-v2-2-0.ipynb  README.md  unsloth-kaggle-installation-official.ipynb
llcuda-pdf-portfolio/: .gitignore  Makefile  QUICK_START.md  README.md  compile.sh  llcuda_v2_2_0_portfolio.tex
llcuda/_internal/: bootstrap.py  registry.py
llcuda/api/: __init__.py  client.py  gguf.py  multigpu.py  nccl.py
llcuda/cuda/: __init__.py
llcuda/graphistry/: __init__.py  connector.py  rapids.py  workload.py
llcuda/inference/: __init__.py
llcuda/llcuda/: __init__.py
llcuda/louie/: __init__.py  client.py  knowledge.py
llcuda/quantization/: __init__.py
llcuda/unsloth/: __init__.py  adapter.py  exporter.py  loader.py
notebooks/: 00-INDEX-NEW-NOTEBOOKS.md  01-quickstart-llcuda-v2.2.0.ipynb  02-llama-server-setup-llcuda-v2.2.0.ipynb  03-multi-gpu-inference-llcuda-v2.2.0.ipynb  04-gguf-quantization-llcuda-v2.2.0.ipynb  05-unsloth-integration-llcuda-v2.2.0.ipynb  06-split-gpu-graphistry-llcuda-v2-2-0.ipynb  06-split-gpu-graphistry-llcuda-v2.2.0.ipynb  07-knowledge-graph-extraction-graphistry-v2.2.0.ipynb  07-openai-api-client-llcuda-v2.2.0.ipynb  08-document-network-analysis-graphistry-llcuda-v2-2-0.ipynb  08-nccl-pytorch-llcuda-v2.2.0.ipynb  09-large-models-kaggle-llcuda-v2-2-0.ipynb  09-large-models-kaggle-llcuda-v2.2.0.ipynb  10-complete-workflow-llcuda-v2-2-0.ipynb  10-complete-workflow-llcuda-v2.2.0.ipynb  11-gguf-neural-network-graphistry-vis-executed-2.ipynb  11-gguf-neural-network-graphistry-visualization.ipynb  12-gguf-attention-mechanism-explorer-executed.ipynb  12-gguf-attention-mechanism-explorer.ipynb  13-gguf-token-embedding-visualizer-executed-3.ipynb  13-gguf-token-embedding-visualizer.ipynb  Jan_16_2026_build_llcuda_2_1_0_t4_complete.ipynb  Jan_16_2026_llcuda_v2_1_0_gemma3_1b_unsloth_colab.ipynb  Jan_16_2026_llcuda_v2_1_0_gemma3_1b_unsloth_colab_2.ipynb  Jan_16_2026_llcuda_v2_1_1_gemma3_1b_unsloth_colab.ipynb  README-NEW-NOTEBOOKS.md  README.md  SUMMARY.md  Unsloth_Puzzles.ipynb  VISUAL-COMPARISON.md  build_llcuda_v2_1_0_t4_colab.ipynb  build_llcuda_v2_1_0_t4_colab_executed.ipynb  build_llcuda_v2_1_0_t4_colab_old_1.ipynb  build_llcuda_v2_1_2_kaggle_t4x2.ipynb  build_llcuda_v2_2_0_kaggle_t4x2_complete.ipynb  build_llcuda_v2_t4_colab.ipynb  build_llcuda_v2_t4_colab_old_1.ipynb  kaggle-llcuda-v2-2-0.ipynb  kaggle_diagnostic.py  (+13 more)
notebooks-executed/: 01-quickstart-llcuda-v2-2-0-executed.ipynb  02-llama-server-setup-llcuda-v2-2-0-executed.ipynb  03-multi-gpu-inference-llcuda-v2-2-0-executed.ipynb  04-gguf-quantization-llcuda-v2-2-0-executed.ipynb  05-unsloth-integration-llcuda-v2-2-0-executed.ipynb  06-split-gpu-graphistry-llcuda-v2-2-0-executed.ipynb
pypi_source/: .gitignore
pypi_source/examples/: quickstart_jupyterlab.ipynb
release-info/: RELEASE_V1.2.0_SUMMARY.md
release_bundle/: README.md
releases/v2.0.6/: RELEASE_INFO.md  llcuda-binaries-cuda12-t4-v2.0.6.tar.gz.sha256
scripts/: BUILD_AND_INTEGRATE.sh  CREATE_RELEASE_PACKAGE.sh  build_cuda12_tesla_t4_colab.sh  build_github_release.sh  cmake_build_t4.sh  colab_clean_install.py  prepare_github_release_v2.0.2.sh  set_python311_default.sh  test_package.sh
tests/: test_gguf_parser.py  test_new_apis.py  test_tensor_api.py
(+33 files in other folders)
