[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["llcuda", "llcuda._internal", "llcuda.core"]

[tool.setuptools.package-data]
llcuda = [
    "*.so",
    "*.pyd",
    "binaries/**/*",
    "lib/**/*",
]

[project]
name = "llcuda"
version = "2.0.0"
description = "CUDA 12 inference backend for Unsloth - Tesla T4 optimized. Python-first API with native tensor operations, custom CUDA kernels, FlashAttention, and NF4 quantization."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Waqas Muhammad", email = "waqasm86@gmail.com"}
]
keywords = [
    "llm", "cuda", "inference", "unsloth", "t4", "tesla-t4", "tensor-cores",
    "flashattention", "nf4", "quantization", "gguf", "pytorch",
    "deep-learning", "gpu", "colab", "tensor-api", "google-colab"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
]

dependencies = [
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=7.6.0",
    "tqdm>=4.60.0",
    "IPython>=7.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "pybind11>=2.10.0",
]
all = [
    "ipywidgets>=7.6.0",
    "tqdm>=4.60.0",
    "IPython>=7.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/waqasm86/llcuda"
Documentation = "https://waqasm86.github.io/"
Repository = "https://github.com/waqasm86/llcuda"
"Bug Tracker" = "https://github.com/waqasm86/llcuda/issues"
Changelog = "https://github.com/waqasm86/llcuda/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
