[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "llcuda"
version = "2.1.0"
description = "Fast LLM inference on Tesla T4 GPUs with CUDA 12. Complete Unsloth integration, 29 quantization formats, CUDA Graphs, Triton kernels, FlashAttention, Google Colab optimized."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Waqas Muhammad", email = "waqasm86@gmail.com"}
]
keywords = [
    "llm", "cuda", "inference", "unsloth", "t4", "tesla-t4", "tensor-cores",
    "flashattention", "nf4", "quantization", "gguf", "pytorch",
    "deep-learning", "gpu", "colab", "tensor-api", "google-colab"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
]

dependencies = [
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=7.6.0",
    "tqdm>=4.60.0",
    "IPython>=7.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "pybind11>=2.10.0",
]
all = [
    "ipywidgets>=7.6.0",
    "tqdm>=4.60.0",
    "IPython>=7.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/llcuda/llcuda"
Documentation = "https://waqasm86.github.io/"
Repository = "https://github.com/llcuda/llcuda"
"Bug Tracker" = "https://github.com/llcuda/llcuda/issues"
Changelog = "https://github.com/llcuda/llcuda/blob/main/CHANGELOG.md"

# Package discovery configuration
[tool.setuptools.packages.find]
include = ["llcuda*", "core*"]
exclude = [
    "tests*", 
    "examples*", 
    "docs*", 
    "notebooks*", 
    "logs*", 
    "csrc*", 
    "archive*", 
    "scripts*"
]

# Exclude package data patterns
[tool.setuptools.exclude-package-data]
llcuda = [
    "binaries/**/*",
    "lib/**/*.so*",
    "models/**/*",
    "*.gguf",
    "*.tar.gz",
    "*.so",
    "*.so.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false